2014-09-12  Detlev Zundel  <dzu@member.fsf.org>

	* buffer.c (syms_of_buffer): DEFSYM Qchoice (Bug#18337).

2014-09-11  Dmitry Antipov  <dmantipov@yandex.ru>

	* lisp.h (make_local_string): Nitpick indent.
	* print.c (Fprin1_to_string): Remove unused GCPROs.

	More debugging aids around GCPROs.
	* lisp.h (struct gcpro) [DEBUG_GCPRO]: Add extra members.
	(GCPRO1, GCPRO2, GCPRO3, GCPRO4, GCPRO5, GCPRO6, GCPRO7):
	Minor restyle.  If DEBUG_GCPRO, initialize extra fields.

	* lread.c (readevalloop_eager_expand_eval): Add GCPRO and fix
	bootstrap broken if GC_MARK_STACK == GC_USE_GCPROS_AS_BEFORE.

	Remove redundant GCPROs around Ffuncall and Fapply calls. This
	is safe because Ffuncall protects all of its arguments by itself.
	* charset.c (map_charset_for_dump): Remove redundant GCPRO.
	* eval.c (Fapply, apply1, call0, call1, call2, call3, call4, call5)
	(call6, call7): Likewise.  Use compound literals where applicable.
	(run_hook_with_args_2): Use compound literal.

2014-09-11  Paul Eggert  <eggert@cs.ucla.edu>

	Pacify --enable-gcc-warnings when no window system is used.
	These warnings found that subscript error, so they seem worthwhile.
	* composite.c (char_composable_p): Simplify a bit.
	* frame.c (x_set_frame_parameters): Add an IF_LINT.
	* frame.c (x_set_horizontal_scroll_bars, x_set_scroll_bar_height):
	* frame.h (FRAME_HAS_HORIZONTAL_SCROLL_BARS):
	* window.c (set_window_scroll_bars):
	Use USE_HORIZONTAL_SCROLL_BARS for simplicity.
	* frame.h [! USE_HORIZONTAL_SCROLL_BARS]:
	Ignore -Wsuggest-attribute=const.
	* window.h (USE_HORIZONTAL_SCROLL_BARS): New macro.
	(WINDOW_HAS_HORIZONTAL_SCROLL_BAR): Use it.

2014-09-10  Paul Eggert  <eggert@penguin.cs.ucla.edu>

	* charset.c (Fget_unused_iso_final_char): Fix subscript error.
	Use check_iso_charset_parameter instead of doing the checks by hand.
	(check_iso_charset_parameter): Move up.  Check parameters a bit
	more carefully, and return true for 96-char sets.  All callers changed.
